@@ -1,3 +1,7 @@
+mlr_2.2
+- new learners:
+-- classif.lqa
+
 mlr_2.1:
 - mlr now supports multi-criteria tuning
 - mlr now supports cluster analysis (experimental)
